--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet/less" type="text/css" href="./style.less">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.10.3/less.min.js"></script>
-    <script src="./script.js"></script>
+ 
     <title>Document</title>
 </head>
 <body>
@@ -23,6 +24,11 @@
         <span class="color10"></span>
         <span class="color11"></span>
         <span class="color12"></span>
+        <button class="regenerate">Click to Generate New Colors</button>
       </div>
+      
+
+
+      <script src="./script.js"></script>
 </body>
 </html>
