--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <span class="color10"></span>
         <span class="color11"></span>
         <span class="color12"></span>
-        <button class="regenerate">Click to Generate New Colors</button>
+        <button class="regenerate">Click to Regerate Colors</button>
       </div>
       
 
