--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 </head>
 <body>
     <div id="colorWheel">
-        <span class="color01"></span>
-        <span class="color02"></span>
-        <span class="color03"></span>
-        <span class="color04"></span>
-        <span class="color05"></span>
-        <span class="color06"></span>
-        <span class="color07"></span>
-        <span class="color08"></span>
-        <span class="color09"></span>
-        <span class="color10"></span>
-        <span class="color11"></span>
-        <span class="color12"></span>
-        <button class="regenerate">Click to Regerate Colors</button>
+        <span class="color01" id ="red"></span>
+        <span class="color02" id ="red-violet"></span>
+        <span class="color03" id ="violet"></span>
+        <span class="color04" id ="blue-violet"></span>
+        <span class="color05" id ="blue"></span>
+        <span class="color06" id ="blue-green"></span>
+        <span class="color07" id ="green"></span>
+        <span class="color08" id ="yellow-green"></span>
+        <span class="color09" id ="yellow"></span>
+        <span class="color10" id ="yellow-orange"></span>
+        <span class="color11" id ="orange"></span>
+        <span class="color12" id ="red-orange"></span>
+        <button class="regenerate">Regenerate Colors</button>
       </div>
       
 
