--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <title>Document</title>
 </head>
 <body>
+    <h1 class="title">Color Wheel</h1>
+    <p class="main-text"> 
+        Sam Fulton
+        <br>
+        ARH100 34548
+    </p>
     <div id="colorWheel">
         <span class="color01" id ="red"></span>
         <span class="color02" id ="red-violet"></span>
@@ -24,7 +30,7 @@
         <span class="color10" id ="yellow-orange"></span>
         <span class="color11" id ="orange"></span>
         <span class="color12" id ="red-orange"></span>
-        <button class="regenerate">Regenerate Colors</button>
+        <button class="regenerate">Click Here to Regenerate Colors</button>
       </div>
       
 
