--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet/less" type="text/css" href="./style.less">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/less.js/3.10.3/less.min.js"></script>
  
-    <title>Document</title>
+    <title>Color Wheel</title>
 </head>
 <body>
     <h1 class="title">Color Wheel</h1>
